Add GitHub Actions workflow for continuous deployment

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,4 +18,18 @@ jobs:
           go-version: '1.24.0'  # Latest stable version
 
       - name: Build app
-        run: ./scripts/buildprod.sh
+        run: ./scripts/buildprod.sh 
+
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Use gcloud CLI
+        run: gcloud info
+
+      - name: Build and push Docker image
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-452722/notely-ar-repo/notely .
